<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.laiwang.googleMapController.GPSOperation" >

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:layout_margin="10dp" >
        
        <fragment android:id="@+id/map"
        	android:layout_width="match_parent"
        	android:layout_height="match_parent"
        	android:name="com.google.android.gms.maps.MapFragment" />
        
    </LinearLayout>
    
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_margin="10dp"
        android:orientation="vertical" >
        
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >
            
            <Button android:id="@+id/gps_record_current"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/gps_record_current" />
            
            <Button android:id="@+id/gps_clear_current"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/gps_clear_current" />
            
        </LinearLayout>
        
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >
            
            <Button android:id="@+id/gps_record_list"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/gps_record_list" />
            
            <Button android:id="@+id/gps_return"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/gps_return" />
            
        </LinearLayout>
        
    </LinearLayout>

</LinearLayout>
