<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.laiwang.userController.LoginActivity" >

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp">
        
        <TextView android:id="@+id/error_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FF0000" />
        
    </LinearLayout>
    
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:orientation="horizontal" >
        
        <TextView android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:text="@string/login_username_label" />
        
        <EditText android:id="@+id/login_username"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content" />
        
    </LinearLayout>
    
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:orientation="horizontal" >
        
        <TextView android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:text="@string/password_label" />
        
        <EditText android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
        
    </LinearLayout>
    
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:layout_margin="10dp"
        android:orientation="horizontal">
        
        <Button android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login" />
        
        <Button android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register" />
        
    </LinearLayout>

</LinearLayout>
